--- a/config.json
+++ b/config.json
@@ -46,7 +46,7 @@
       "detail": "https://jszyapi.com"
     },
     "dbzy": {
-      "api": "https://dbzy.tv/api.php/provide/vod",
+      "api": "https://caiji.dbzy5.com/api.php/provide/vod",
       "name": "豆瓣资源"
     },
     "mozhua": {
@@ -84,6 +84,9 @@
     "xiaomaomi": {
       "api": "https://zy.xmm.hk/api.php/provide/vod",
       "name": "小猫咪资源"
-    }
+    },
+    "maotai": {
+      "api": "https://caiji.maotaizy.cc/api.php/provide/vod",
+      "name": "茅台资源"
   }
 }
